# mec17-blinky

./: Cargo.toml  MEC17xx.yaml  b.bat  build.rs  g.bat  link.x  spi_cfg.txt  write-to-flash.cmd
.cargo/: config.toml
src/: main.rs
